--- a/css/materialer.css
+++ b/css/materialer.css
@@ -112,17 +112,17 @@ header #menu-bar ul li:hover > ul {
 
 .matrialertitel {
         position: absolute;
-        top: 70%;
         left: 50%;
         transform: translate(-50%, -50%);
         border: 5px;
         background: rgba(0, 0, 0, 0.5); 
         width: 100%;
-        height: 7%;
+        height: 10%;
         color: #fff; 
         text-align: center;
         font-size: 2.5rem;
         font-weight: bold;
+        top: 94%;
 
 }
 
@@ -318,14 +318,14 @@ form input[type="submit"]:hover {
         display: none;
     }
 
-}
+} 
 
 @media only screen and (min-width: 1024px) and (orientation: landscape){ /* tablet landscape */
     .matrialertitel {
         display: block;
     }
     .matrialertitel {
-        position: absolute;
+        /* position: absolute;
         top: 197%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -337,7 +337,18 @@ form input[type="submit"]:hover {
         text-align: center;
         padding: 1rem;
         font-size: 2.5rem;
-        font-weight: bold;
+        font-weight: bold; */
+
+        background-color: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    top: 96.1%;
+    color: var(--primary);
+    font-weight: bold;
+    font-size: 5rem;
+    text-align: center;
+    height: auto%;
+    text-transform: uppercase;
+    }
     }
 }
 
